# doomscroll.dev

./: .gitignore  DEVELOPMENT_PLAN.md  IMPLEMENTATION_PLAN.md  README.md  REQUIREMENTS_CONFIRMED.md  pyproject.toml
.claude/: settings.local.json
backend/: .env.example  .gitignore  README.md  alembic.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 3fa4ae11e277_inital.py  add_bookmarks.py  add_source_metadata.py  add_sources_and_sync_jobs.py  add_users_table.py
backend/app/: __init__.py  config.py  exceptions.py  main.py
backend/app/cache/: __init__.py  backends.py  cache_service.py
backend/app/core/: __init__.py  database.py  logging_config.py  scheduler.py
backend/app/dependencies/: auth.py
backend/app/middleware/: __init__.py  exception_handler.py  rate_limit.py
backend/app/models/: article.py
backend/app/repositories/: __init__.py  (+7 more)
backend/scripts/: migrate.ps1  migrate.py
deployment-local/: .env.example  README.md  docker-compose.yaml  start.ps1  stop.ps1
docs/: API.md  ARCHITECTURE.md  DESIGN_DECISIONS.md  SETUP.md
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
shared/: __init__.py
shared/core/: __init__.py  config.py  database.py  logging_config.py
shared/models/: __init__.py  article.py  bookmark.py  source.py  sync_job.py  user.py
shared/schemas/: __init__.py  article.py  bookmark.py  common.py  source.py  sync_job.py  user.py
sync_service/: .env.example  README.md  __init__.py  requirements.txt  run_sync.py
sync_service/app/: __init__.py
(+89 files in other folders)
