[project]
name = "doomscroll-shared"
version = "0.1.0"
description = "Shared models, schemas, and utilities for Doomscroll Content Aggregator"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "SQLAlchemy>=2.0.0",
    "asyncpg>=0.29.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["shared*"]
